--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-    "name": "forkify",
-    "version": "1.0.0",
-    "description": "Recipe application",
-    "scripts": {
-        "start": "parcel index.html",
-        "build": "parcel build inde.html"
-    },
-    "author": "Vita Chukhno",
-    "licence": "ISC",
-    "devDependencies": {
-        "@parcel/transformer-sass": "^2.4.0",
-        "parcel": "^2.4.0"
-    },
-    "dependencies": {
-        "core-js": "^3.21.1",
-        "regenerator-runtime": "^0.13.9"
-    }
+  "name": "forkify",
+  "version": "1.0.0",
+  "description": "Recipe application",
+  "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html --dist-dir ./dist"
+  },
+  "author": "Vita Chukhno",
+  "licence": "ISC",
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.4.0",
+    "parcel": "^2.4.0"
+  },
+  "dependencies": {
+    "core-js": "^3.21.1",
+    "fractional": "^1.0.0",
+    "regenerator-runtime": "^0.13.9"
+  }
 }
